# untitled-folder

./: .gitignore  ACTUAL_ENHANCEMENTS.md  ENHANCEMENT.md  ENHANCEMENT_SUMMARY.md  QWEN.md  README.md  README_MAC_CONNECTOR.md  README_OBD_TEST.md  VOICE_FEATURES.md  advanced_obd_test.py  agent_connection_test.py  agent_method_test.py  baud_rate_test.py  bluetooth_obd_check.py  carcare.roxonn.com.conf  carcare.roxonn.com.updated.conf  check_bluetooth_obd.py  check_obd_connection_status.py  comprehensive_obd_test.py  direct_obd_test.py  direct_serial_test.py  dns_changes_carcare.json  docker-compose.yml  enhanced_elm_test.py  explicit_connection_then_data.py  extended_obd_test.py  how_it_works.py  mac_obd_connector.py  minimal_mobile_approach.py  mobile_app_connection.py  mobile_app_init.py  mobile_pairing_approach.py  mobile_style_obd.py  obd_diagnostic.py  obd_pairing_reader.py  obd_test.py  obd_two_step_process.py  persistent_obd_test.py  persistent_obd_test_script.py  reconnect_test.py  (+9 more)
a2a_gui/: .env  Dockerfile  MOBILE_ENHANCEMENTS_SUMMARY.md  MOBILE_RESPONSIVENESS.md  README.md  main.py  pyproject.toml
a2a_gui/api/: endpoints.py
a2a_gui/frontend/: README.md  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
a2a_gui/services/: can_simulation_service.py  car_agent_client.py
car_diagnostic_agent/: .env  .gitignore  BLUETOOTH_OBD_INTERFACE.md  Dockerfile  PERSISTENT_CONNECTION_IMPLEMENTATION.md  README.md  check_env.py  examine_output.py  pyproject.toml  test_sync.py  test_voice.py
misc/: README.md  (+2 more)
(+69 files in other folders)
